--- a/Lab4/FlagsQuizApp/app/src/main/res/drawable/round_corner.xml
+++ b/Lab4/FlagsQuizApp/app/src/main/res/drawable/round_corner.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
 <solid android:color="#FFFFFF" />
     <stroke android:width="1dip" android:color="#1e1e1e"/>
     <corners android:radius="10dip"/>
     <padding android:left="0dip" android:right="0dip" android:top="0dip" android:bottom="0dip"/>
-</selector>
+</shape>
