--- a/Lab5/OurApp/app/src/main/res/layout/activity_main.xml
+++ b/Lab5/OurApp/app/src/main/res/layout/activity_main.xml
@@ -4,76 +4,15 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backgroundPage"
+    android:paddingBottom="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="16dp"
     tools:context="com.example.ourapp.MainActivity">
 
-
-    <ImageView
-        android:id="@+id/flags"
-        android:layout_width="300dp"
-        android:layout_height="200dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="25dp"
-        android:background="@drawable/image"
-        android:gravity="center"
-        android:layout_alignRight="@+id/relativeLayout"
-        android:layout_alignEnd="@+id/relativeLayout"
-        android:layout_alignLeft="@+id/relativeLayout"
-        android:layout_alignStart="@+id/relativeLayout" />
-
-    <RelativeLayout
-        android:layout_below="@+id/flags"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="30dp"
-        android:padding="20dp"
-        android:elevation="4dp"
-        android:background="@drawable/round_corner"
-        android:layout_width="fill_parent"
+    <ListView
+        android:id="@+id/lstTask"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/relativeLayout">
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:id="@+id/btnGroup"
-            android:paddingTop="10dp"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-
-            <Button
-                android:id="@+id/btnPlay"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:background="@color/colorAccent"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:text="PLAY"
-                android:textColor="#FFFFFF"
-                android:textStyle="bold"
-                android:theme="@style/MyButton" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_below="@+id/btnGroup"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <SeekBar
-                android:id="@+id/seekBar"
-                android:max="3"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:id="@+id/txtMode"
-                android:layout_gravity="center"
-                android:text="EASY"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-
-    </RelativeLayout>
+        />
 </RelativeLayout>
