--- a/Lab5/Notite/app/src/main/res/menu/menu.xml
+++ b/Lab5/Notite/app/src/main/res/menu/menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_ad_task"
+        android:id="@+id/action_add_task"
         android:icon="@android:drawable/ic_menu_add"
         android:title="Add New Task"
         app:showAsAction="always"
