--- a/Lab5/Notite/app/src/main/res/menu/menu.xml
+++ b/Lab5/Notite/app/src/main/res/menu/menu.xml
@@ -6,7 +6,7 @@
         android:id="@+id/action_add_task"
         android:icon="@android:drawable/ic_menu_add"
         android:title="Add New Task"
-       
+        app:showAsAction="always"
         />
 
 </menu>
